made the js update recipies button work

--- a/recipies.html
+++ b/recipies.html
@@ -143,7 +143,7 @@
                         </div>
                         <div class="ingredient">
                             <input type="checkbox" id="whitepepper" name="whitepepper" value="whitepepper">
-                            <label for="whitepepper">Wh Pepper</label>
+                            <label for="whitepepper">White Pepper</label>
                         </div>
                         <div class="ingredient">
                             <input type="checkbox" id="paprika" name="paprika" value="paprika">
@@ -233,6 +233,10 @@
                             <input type="checkbox" id="honeybbqsauce" name="honeybbqsauce" value="honeybbqsauce">
                             <label for="honeybbqsauce">Honey BBQ Sauce</label>
                         </div>
+                        <div class="ingredient">
+                            <input type="checkbox" id="sweetchilisauce" name="sweetchilisauce" value="sweetchilisauce">
+                            <label for="sweetchilisauce">Sweet Chili Sauce</label>
+                        </div>
                     </div>
                 </div>
 
@@ -292,6 +296,10 @@
                             <label for="whitevinegar">White Vinegar</label>
                         </div>
                         <div class="ingredient">
+                            <input type="checkbox" id="ricevinegar" name="ricevinegar" value="ricevinegar">
+                            <label for="ricevinegar">Rice Vinegar</label>
+                        </div>
+                        <div class="ingredient">
                             <input type="checkbox" id="worcestershiresauce" name="worcestershiresauce" value="worcestershiresauce">
                             <label for="worcestershiresauce">Worcestershire Sauce</label>
                         </div>
@@ -302,7 +310,7 @@
                     </div>
                 </div>
 
-                <button id="updateRecipies" onclick="updateReicipies()">Update Recipies</button>
+                <button id="updateRecipies">Update Recipies</button>
             </div>
             <div class="recipies">
                 <div id="buttermilkchickentenders">
@@ -363,7 +371,7 @@
                         <li>1 cup cornstarch</li>
                         <li>2 tsp paprika</li>
                         <li>2 tsp black pepper</li>
-                        <li>peanut oil (for frying)</li>
+                        <li>oil (for frying)</li>
                         <li>flaked salt (for serving, optional)</li>
                     </ul>
 
@@ -386,8 +394,8 @@
                         <li>2 tbsp brown sugar</li>
                         <li>1½ tsp kosher salt</li>
                         <li>1 tsp black pepper</li>
-                        <li>1 ½ tsp garlic powder</li>
-                        <li>1½ tsp onion powder or dried minced onion</li>
+                        <li>1½ tsp garlic powder</li>
+                        <li>1½ tsp onion powder</li>
                         <li>1 tsp smoked paprika</li>
                         <li>1 tsp chili powder</li>
                         <li>1 tsp ground cumin</li>
@@ -422,9 +430,9 @@
                         <li>⅛ tsp paprika</li>
                         <li>⅛ tsp garlic powder</li>
                         <li>⅛ tsp baking powder</li>
-                        <li>canola oil for frying</li>
+                        <li>oil for frying</li>
                         <li>⅔ cup Franks Red Hot pepper sauce</li>
-                        <li>1 stick unsalted butter</li>
+                        <li>1 stick butter</li>
                         <li>1 tbsp white vinegar</li>
                         <li>¼ tsp Worcestershire sauce</li>
                     </ul>
@@ -446,7 +454,7 @@
                     <h2>Fried Scallops</h2>
                     <p>Ingredients:</p>
                     <ul>
-                        <li>4 cups vegetable oil</li>
+                        <li>4 cups oil</li>
                         <li>1 lb scallops</li>
                         <li>½ cup flour</li>
                         <li>½ cup cornstarch</li>
@@ -483,7 +491,9 @@
                         <li>1 tsp salt</li>
                         <li>½ cup buttermilk</li>
                         <li>tallow for deep frying</li>
-                        <li>marinara sauce, lemon wedges, or aioli, for serving, optional</li>
+                        <li>marinara sauce</li>
+                        <li>lemon wedges</li>
+                        <li>aioli</li>
                     </ul>
 
                     <p>Instructions:</p>
@@ -502,7 +512,7 @@
                     <p>Ingredients:</p>
                     <ul>
                         <li>½ lb large shrimp, peeled and deveined</li>
-                        <li>2 quarts vegetable oil for deep frying</li>
+                        <li>2 quarts oil for deep frying</li>
                         <li>2 ¼ cup all purpose flour</li>
                         <li>⅓ cup ice water</li>
                         <li>¼ cup cornstarch</li>
@@ -552,7 +562,7 @@
                     <h2>Bang Bang Shrimp</h2>
                     <p>Ingredients:</p>
                     <ul>
-                        <li>½ cup vegetable oil, or more, as needed</li>
+                        <li>½ cup oil, or more, as needed</li>
                         <li>1 cup buttermilk</li>
                         <li>¾ cup all-purpose flour</li>
                         <li>½ cup cornstarch</li>
@@ -568,7 +578,8 @@
                         <li>1 tbsp honey</li>
                         <li>1 tsp rice vinegar</li>
                         <li>1 tbsp hot sauce</li>
-                        <li>kosher salt and freshly ground black pepper, to taste</li>
+                        <li>kosher salt</li>
+                        <li>freshly ground black pepper</li>
                     </ul>
 
                     <p>Instructions:</p>
@@ -594,7 +605,7 @@
                         <li>1 tbsp salt</li>
                         <li>1 tbsp pepper</li>
                         <li>2 tsp mexican oregano</li>
-                        <li>Oil for frying, at least 1 inch deep in pan</li>
+                        <li>oil for frying, at least 1 inch deep in pan</li>
                     </ul>
 
                     <p>Instructions:</p>
@@ -662,7 +673,6 @@
                         <li>½ tsp kosher salt</li>
                         <li>1/4 tsp black pepper</li>
                         <li>1/4 tsp smoked paprika</li>
-                        <li>pinch cayenne pepper</li>
                         <li>1 large sweet onion</li>
                         <li>2 cups all-purpose flour</li>
                         <li>2 tsps seasoned salt</li>
@@ -696,7 +706,7 @@
                         <li>3 tablespoons olive oil</li>
                         <li>2 teaspoons garlic powder</li>
                         <li>2 teaspoons onion powder</li>
-                        <li>1 teaspoon fine sea salt</li>
+                        <li>1 teaspoon fine salt</li>
                         <li>Freshly ground black pepper</li>
                         <li>2 tablespoons finely chopped fresh parsley, optional</li>
                     </ul>
